--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ a:hover{
   float: left;
 }
 .playlist{
-  overflow: auto;
+  overflow-y: scroll;
+  min-height: 20%;
 }
 .playlist a{
   padding-top: 35px;
@@ -67,6 +68,9 @@ header h2{
 .download i{
   font-size: 10px;
   margin-bottom: 5px;
+}
+.account{
+  position: fixed;
 }
 .account i{
   font-size: 15px;
@@ -154,7 +158,6 @@ header h2{
 }
  img:hover{
   opacity: 0.2;
-
 }
 .descrizione{
   display: flex;
@@ -268,7 +271,9 @@ footer{
   align-items: center;
 }
 .bottoni-riproduzione{
-  margin-left: 135px;
+
+  display: flex;
+
 }
 .bottoni-riproduzione i{
   color: white;
@@ -281,14 +286,25 @@ margin-left: 30px;
 .barra{
     background-color: grey;
     border-radius: 10px;
-    width: 400px;
+    width: 350px;
     height: 3px;
     cursor: pointer;
+    margin-top: 30px;
+}
+.bottoni{
+  height: 10px;
+  
+}
+#minuto-sinistra{
+  text-align: left;
+  margin-top: 10px;
 }
 
-
-
-
+#minuto-destra{
+  text-align: right;
+  margin-top: 20px;
+  margin-left: 10px;
+}
 
 
 
