--- a/css/style.css
+++ b/css/style.css
@@ -69,15 +69,15 @@ header h2{
   font-size: 10px;
   margin-bottom: 5px;
 }
-.account{
+#account{
   position: fixed;
 }
-.account i{
+#account i{
   font-size: 15px;
   margin-bottom: 5px;
   margin-top: 5px;
 }
-.account a{
+#account a{
   color: white;
   margin-top: 5px;
   font-size: 18px;
@@ -278,7 +278,7 @@ footer{
 .bottoni-riproduzione i{
   color: white;
   font-size: 18px;
-margin-left: 30px;
+ margin-left: 30px;
 }
 .bottoni-riproduzione p{
   color: white;
@@ -299,9 +299,9 @@ margin-left: 30px;
 }
 
 .bottoni{
-width: 100%;
-text-align: center;
-padding-top: 5px;
+ width: 100%;
+ text-align: center;
+ padding-top: 5px;
 }
 #minuto-sinistra{
   text-align: left;
@@ -334,18 +334,4 @@ padding-top: 5px;
   cursor: pointer;
   margin-top: 25px;
   margin-left: 25px;
-}
-
-
-/* header versione mobile */
-
-
-@media all and (max-widht:530px) {
-  #menu{
-    display: none;
-  }
-}
-
-@media all and(max-width:) {
-
 }
